GASCDS-706: add time series parameter
